--- a/src/locale/ja-JP.json
+++ b/src/locale/ja-JP.json
@@ -1,4 +1,7 @@
 {
+    "navbar": {
+        "old_website": "古い"
+    },
     "hero": {
         "caption": "パソコンが好きな人の集まりのうちのひとり",
         "name": "public_yusuke"
@@ -83,7 +86,15 @@
             "chibauniv_event": {
                 "date": "9月29日",
                 "age": "17歳",
-                "title": "千葉大学主催第12回高校生理科研究発表会、数学・情報の部で優秀賞"
+                "title": "千葉大学主催第12回高校生理科研究発表会、数学・情報の部で優秀賞",
+                "desc": "「フィボナッチ数列を求めるアルゴリズムたち」",
+                "link": "公式サイト"
+            },
+            "cit_event": {
+                "date": "3月16日",
+                "title": "第10回千葉県課題研究発表会 口頭発表/ポスター発表",
+                "desc": "「フィボナッチ数列を求めるアルゴリズムたち」",
+                "link": "概要PDF"
             },
             "atcyan": {
                 "date": "2月16日",
@@ -97,7 +108,8 @@
             "pck2019ho": {
                 "date": "11月9日 - 10日",
                 "title": "パソコン甲子園2019プログラミング部門出場",
-                "desc": "チーム名: AはDPのA"
+                "desc": "チーム名: AはDPのA",
+                "link": "公式サイト"
             },
             "tsukuba_in": {
                 "date": "12月12日",
