--- a/src/locale/ja-JP.json
+++ b/src/locale/ja-JP.json
@@ -107,7 +107,7 @@
             },
             "pck2019ho": {
                 "date": "11月9日 - 10日",
-                "title": "パソコン甲子園2019プログラミング部門出場",
+                "title": "パソコン甲子園2019プログラミング部門本選出場",
                 "desc": "チーム名: AはDPのA",
                 "link": "公式サイト"
             },
